@@ -487,6 +487,29 @@ name|htmlMapper
 decl_stmt|;
 annotation|@
 name|Override
+DECL|method|init
+specifier|public
+name|void
+name|init
+parameter_list|(
+name|Context
+name|context
+parameter_list|)
+block|{
+name|super
+operator|.
+name|init
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|done
+operator|=
+literal|false
+expr_stmt|;
+block|}
+annotation|@
+name|Override
 DECL|method|firstInit
 specifier|protected
 name|void
@@ -740,10 +763,6 @@ operator|=
 name|AUTO_PARSER
 expr_stmt|;
 block|}
-name|done
-operator|=
-literal|false
-expr_stmt|;
 block|}
 annotation|@
 name|Override
