@@ -239,6 +239,9 @@ Other Changes
 
 * SOLR-6275: Improve accuracy of QTime reporting (Ramkumar Aiyengar)
 
+* SOLR-7174: DIH should reset TikaEntityProcessor so that it is capable
+  of re-use (Alexandre Rafalovitch , Gary Taylor via Noble Paul)
+
 ==================  5.0.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
